fixed some spacing and added contact button

--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ html, body {
 /* the title of the site */
 #site-title {
     color: var(--site-blue);
-    padding: 1% 1%;
+    padding: 2.5% 2.5%;
     font-weight: var(--semibold);
 }
 
@@ -33,13 +33,18 @@ html, body {
     animation-fill-mode: forwards;
 }
 
+
 /* the subtitle for the site */
-#site-subtitle {
+.monospaced-subheading {
     font-weight: normal;
     text-align: center;
     width: 90%;
     margin: 2% auto 5% auto;
     font-family: Monospaced, monospace;
+}
+
+/* the subtitle for the site */
+.site-subtitle {
     animation: fadeInAnimation ease 1s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
@@ -66,8 +71,7 @@ html, body {
 
 /* a column within a section */
 .column {
-    margin: 0 auto 0 auto;
-    /*margin-bottom: 0;*/
+    margin: 0 auto 2.5% auto;
     text-align: center;
     position: relative;
     flex-basis: 95%;
@@ -91,8 +95,8 @@ html, body {
     }
 
     /* the site's subtitle */
-    #site-subtitle {
-        width: 30%;
+    .site-subtitle {
+        width: 40%;
     }
 
     /* the desktop set of images */
@@ -118,6 +122,13 @@ html, body {
         transform: translate(-50%, -50%) scale(1.2, 1.2) skew(-2deg);
         z-index: 1;
         transition: all 100ms ease-in-out;
+    }
+
+    /* the download file button when hovered */
+    .file-button:hover {
+        transform: scale(1.05, 1.05) skew(-3deg);
+        transition: all 100ms ease-in-out;
+        box-shadow: 3px 3px 5px gray;
     }
 }
 
@@ -146,7 +157,6 @@ img {
 
 /* the top section of the site */
 #top-section {
-    padding: 1% 5%;
     height: 100vh;
 }
 
@@ -156,6 +166,7 @@ img {
     padding: 1% 0;
     text-align: center;
     min-height: 100vh;
+    vertical-align: center;
 }
 
 /* the header text for a section */
@@ -196,16 +207,8 @@ a {
     font-weight: normal;
     border-radius: 3px;
     display: inline-block;
-    padding: 0 1%;
-    margin-left: 1%;
-    margin-right: 1%;
-}
-
-/* the download file button when hovered */
-.file-button:hover {
-    transform: scale(1.05, 1.05) skew(-3deg);
-    transition: all 100ms ease-in-out;
-    box-shadow: 3px 3px 5px gray;
+    padding: 2%;
+    margin: 2%;
 }
 
 /* the invisible link (anchor) for a section */
@@ -238,4 +241,8 @@ a {
 #files {
     background-color: var(--site-blue);
     color: white;
+}
+
+.click-button {
+    background-color: var(--site-blue);
 }
